--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Untitled.Untitled
 EditorStartupMap=/Game/Untitled.Untitled
+GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
