--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5BEC382C5F4A38260AF84D8F59E39ADE
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "49F2A6DA42498EB07B2EF1AA5ACD1C47", "Projet A")
+
