--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Untitled.Untitled
+GameDefaultMap=/Game/Menu/Menu.Menu
 EditorStartupMap=/Game/Untitled.Untitled
 GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
 
